--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DB_MYSQL_PORT=3306
 DB_MYSQL_PASSWORD=123456
 DB_MYSQL_NAME=nextcloud
 DB_MYSQL_USER=nextcloud
-DB_MYSQL_HOST=nextcloud-mysql
+DB_MYSQL_HOST=mysql
 
 # version tags refer to: https://hub.docker.com/_/nextcloud
 APP_VERSION=latest
