--- a/.env
+++ b/.env
@@ -1,20 +1,18 @@
-DB_MYSQL_VERSION=5.7
+DB_MYSQL_VERSION=8.0
 DB_MYSQL_PORT=3306
 DB_MYSQL_PASSWORD=123456
 DB_MYSQL_NAME=nextcloud
 DB_MYSQL_USER=nextcloud
 DB_MYSQL_HOST=mysql
 
-# version tags refer to: https://hub.docker.com/_/nextcloud
+DB_REDIS_VERSION=6
+
 APP_VERSION=latest
 APP_PORT=9001
 APP_PASSWORD_INIT=True
 APP_USER=admin
 APP_PASSWORD=admin
-APP_CONTAINER_NAME=nextcloud
-APP_NETWORK=nextcloud
-APP_SITE_URL=localhost:8080
+APP_NAME=nextcloud
+APP_TRUST_URL=nextcloud.example.com
 
 VOLUMES_PATH_PREFIX=./volumes
-DOMAIN=nextcloud.example.com
-EMAIL=help@websoft9.com
