--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ version: '3.8'
 services:
   nextcloud:
     image: nextcloud:${APP_VERSION}
-    container_name: ${APP_CONTAINER_NAME}
+    container_name: ${APP_NAME}
     ports:
       - ${APP_PORT}:80
     volumes:
@@ -16,29 +16,24 @@ services:
       - MYSQL_DATABASE=${DB_MYSQL_NAME}
       - MYSQL_USER=${DB_MYSQL_USER}
       - MYSQL_HOST=mysql
+      - REDIS_HOST=redis
+      - NEXTCLOUD_TRUSTED_DOMAINS=${APP_TRUST_URL} 8.142.3.195 localhost 172.0.0.1
       - NEXTCLOUD_ADMIN_USER=${APP_USER}
       - NEXTCLOUD_ADMIN_PASSWORD=${APP_PASSWORD}
-      - NEXTCLOUD_DATA_DIR=/var/www/html/data
-      - NEXTCLOUD_TRUSTED_DOMAINS=
-      - NEXTCLOUD_UPDATE=0
-      - REDIS_HOST=redis
     depends_on: 
       - mysql
       - redis
     restart: always
-    stdin_open: true
-    tty: true
 
   mysql:
     image: mysql:${DB_MYSQL_VERSION}
-    container_name: nextcloud-mysql
+    container_name: ${APP_NAME}-mysql
     restart: always
+    command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
     ports:
      - ${DB_MYSQL_PORT}:3306
-    command: ["--max-allowed-packet=128M", "--innodb-log-file-size=64M", "--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci"]
     volumes:
-      - ${VOLUMES_PATH_PREFIX}/mysql/mysql_config/conf.d:/etc/mysql/conf.d
-      - ${VOLUMES_PATH_PREFIX}/mysql/mysql_data:/var/lib/mysql
+      - mysql:/var/lib/mysql
     environment:
       MYSQL_DATABASE: ${DB_MYSQL_NAME}
       MYSQL_USER: ${DB_MYSQL_USER}
@@ -46,8 +41,8 @@ services:
       MYSQL_ROOT_PASSWORD: ${DB_MYSQL_PASSWORD}
 
   redis:
-    image: redis:6
-    container_name: nextcloud-redis
+    image: redis:${DB_REDIS_VERSION}
+    container_name: ${APP_NAME}-redis
     restart: always
     command: ["--databases", "1"]
     healthcheck:
@@ -60,7 +55,7 @@ services:
 
 networks:
   default:
-      name: ${APP_NETWORK}
+      name: ${APP_NAME}
 
 volumes:
   nextcloud:
