--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - MYSQL_USER=${DB_MYSQL_USER}
       - MYSQL_HOST=mysql
       - REDIS_HOST=redis
-      - NEXTCLOUD_TRUSTED_DOMAINS=${APP_TRUST_URL} 8.142.3.195 localhost 172.0.0.1
+      - NEXTCLOUD_TRUSTED_DOMAINS=${APP_TRUST_URL}
       - NEXTCLOUD_ADMIN_USER=${APP_USER}
       - NEXTCLOUD_ADMIN_PASSWORD=${APP_PASSWORD}
     depends_on: 
