--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - ${APP_PORT}:80
     volumes:
       - nextcloud:/var/www/html
+      - nextcloud-data:/var/www/html/data
     environment:
       - MYSQL_PASSWORD=${DB_MYSQL_PASSWORD}
       - MYSQL_DATABASE=${DB_MYSQL_NAME}
@@ -60,7 +61,9 @@ networks:
 volumes:
   nextcloud:
     driver: local
-  redis:
+  nextcloud-data:
+    driver: local
+redis:
     driver: local
   mysql:
     driver: local
