--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
 
   mysql:
     image: mysql:${DB_MYSQL_VERSION}
-    container_name: ${APP_NAME}-mysql
+    container_name: ${APP_NAME}-db
     restart: always
     command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
     ports:
@@ -54,16 +54,12 @@ services:
     volumes:
       - redis:/data
 
+volumes:
+  nextcloud:
+  nextcloud-data:
+  redis:
+  mysql:
+
 networks:
   default:
       name: ${APP_NAME}
-
-volumes:
-  nextcloud:
-    driver: local
-  nextcloud-data:
-    driver: local
-  redis:
-    driver: local
-  mysql:
-    driver: local
