--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_MYSQL_USER=nextcloud
 DB_MYSQL_HOST=mysql
 
 DB_REDIS_VERSION=6
-
+APP_NETWORK=websoft9
 APP_VERSION=latest
 APP_PORT=9001
 APP_PASSWORD_INIT=True
