--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
+POWER_PASSWORD=8dHZPFLFGoPXuC
 DB_MYSQL_VERSION=8.0
 DB_MYSQL_PORT=3306
-DB_MYSQL_PASSWORD=123456
+DB_MYSQL_PASSWORD=$POWER_PASSWORD
 DB_MYSQL_NAME=nextcloud
 DB_MYSQL_USER=nextcloud
 DB_MYSQL_HOST=mysql
@@ -11,7 +12,7 @@ APP_VERSION=latest
 APP_PORT=9001
 APP_PASSWORD_INIT=True
 APP_USER=admin
-APP_PASSWORD=admin
+APP_PASSWORD=$POWER_PASSWORD
 APP_NAME=nextcloud
 APP_TRUST_URL=nextcloud.example.com
 
