--- a/.env
+++ b/.env
@@ -14,6 +14,5 @@ APP_PASSWORD_INIT=True
 APP_USER=admin
 APP_PASSWORD=$POWER_PASSWORD
 APP_NAME=nextcloud
-APP_TRUST_URL=nextcloud.example.com
-
-VOLUMES_PATH_PREFIX=./volumes
+APP_URL_REPLACE=true
+APP_URL=nextcloud.example.com
