--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DB_MYSQL_HOST=mysql
 DB_REDIS_VERSION=6
 APP_NETWORK=websoft9
 APP_VERSION=latest
-APP_PORT=9001
+APP_HTTP_PORT=9001
 APP_USER=admin
 APP_PASSWORD=$POWER_PASSWORD
 APP_NAME=nextcloud
