--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     image: nextcloud:${APP_VERSION}
     container_name: ${APP_NAME}
     ports:
-      - ${APP_PORT}:80
+      - ${APP_HTTP_PORT}:80
     volumes:
       - nextcloud:/var/www/html
       - nextcloud-data:/var/www/html/data
